--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,27 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f9fbfe;
+  height: 100%;
+  min-height: 100%;
+}
+
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div {
+  height: 100vh;
+  min-height: 100vh;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 a {
@@ -15,6 +36,124 @@ a {
   box-sizing: border-box;
 }
 
+.bgMain {
+  background-color: #6379f4 !important;
+  border: none !important;
+  color: white !important;
+}
+.bgSecondary {
+  background-color: #f9fbfe !important;
+}
+
+.textMain {
+  color: #6379f4 !important;
+}
+
+.rounder {
+  border-radius: 0px !important;
+}
+.rounder-top {
+  border-bottom-left-radius: 2;
+  border-bottom-right-radius: 2;
+  /* border-top-left-radius: 30px;
+  border-top-right-radius: 30px; */
+}
+
+.rounder-bottom {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 2;
+  border-top-right-radius: 2;
+}
+
+input.form-control:focus {
+  border-color: none;
+  box-shadow: none;
+  outline: 0 none;
+}
+
+div > .shadow-sm {
+  box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.053) !important;
+}
+
+.underlineInput::placeholder {
+  color: rgba(128, 128, 128, 0.123) !important;
+  padding-top: 100px !important;
+  font-size: 14px;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
+}
+
+.containerMain {
+  height: 100vh;
+}
+
+.authMain {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  height: 100vh;
+}
+
+svg {
+  filter: drop-shadow(0 0 10px white);
+}
+
+.pin {
+  border-color: grey !important;
+  box-shadow: none !important;
+}
+.pin:invalid {
+  animation: shake 5 linear 75ms !important;
+  border-color: red !important;
+  box-shadow: 0 0 0.25rem rgba(red, 0.5) !important;
+}
+
+.cardItem {
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.027);
+}
+
+.nav.nav-pills > button.active {
+  background-color: white;
+  font-weight: bold;
+  color: #6379f4;
+  border-left: 5px solid #6379f4;
+  border-radius: 0%;
+}
+
+.mainDiv {
+  max-height: 100vh;
+}
+
+.containerMain {
+  height: 100vh;
+}
+
+.authMain {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  height: 100vh;
+}
+
+svg {
+  filter: drop-shadow(0 0 10px white);
+}
+
+.pin {
+  border-color: grey !important;
+  box-shadow: none !important;
+}
+.pin:invalid {
+  animation: shake 5 linear 75ms !important;
+  border-color: red !important;
+  box-shadow: 0 0 0.25rem rgba(red, 0.5) !important;
+}
+
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -24,3 +163,46 @@ a {
     background: black;
   }
 }
+
+@media (min-width: 768px) {
+  .transaction-card {
+    background-color: white;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.027);
+  }
+  .cardItem {
+    box-shadow: none;
+  }
+
+  .mainDiv {
+    max-height: 678px;
+  }
+  .containerMain {
+    max-height: fit-content;
+  }
+  .authMain {
+    height: fit-content;
+    box-shadow: none;
+    border-radius: 0%;
+  }
+  .rounder-top,
+  .rounder-bottom {
+    border-radius: 20px;
+  }
+  .rounder {
+    border-radius: 20px !important;
+  }
+}
+
+@keyframes shake {
+  from {
+    transform: translateY(-5%);
+  }
+  to {
+    transform: translateY(5%);
+  }
+}
+
+html > body > div#__next > #text {
+  display: none;
+}
+
